# python_teaching

./: .env.local.template  .gitignore  DEPLOYMENT.md  README.md  main.py  pyproject.toml  test_deployment.sh
.claude/skills/: README.md  dash-builder.md  data-analysis.md  data-cleaning.md  dataframe-explorer.md  pandas-helper.md  visualization.md
.github/workflows/: deploy.yml
docs/: _config.yml  _toc.yml  agent_architecture.md  curriculum.json  index.md
docs/automation/: index.md
docs/data-science/: index.md
docs/datasets/: authors.csv  books.csv  reviews.csv
docs/day-01/: exercise.md  lesson.md  linkedin-post.md  review.json  solution.md
docs/day-02/: exercise.md  lesson.md  linkedin-post.md  review.json  solution.md
docs/day-03/: exercise.md  lesson.md  linkedin-post.md  review.json  solution.md
docs/day-04/: exercise.md  lesson.md  linkedin-post.md  review.json  solution.md
docs/day-05/: exercise.md  lesson.md  linkedin-post.md  review.json  solution.md
docs/day-06/: exercise.md  lesson.md  linkedin-post.md  review.json  solution.md
docs/day-07/: exercise.md  lesson.md  linkedin-post.md  review.json  solution.md
docs/day-08/: exercise.md  lesson.md  linkedin-post.md  review.json  solution.md
docs/day-09/: exercise.md  lesson.md  linkedin-post.md  review.json  solution.md
docs/day-10/: exercise.md  lesson.md  linkedin-post.md  review.json  solution.md
docs/day-11/: exercise.md  lesson.md  linkedin-post.md  review.json  solution.md
docs/day-12/: exercise.md  lesson.md  linkedin-post.md  review.json  solution.md
docs/day-13/: exercise.md  lesson.md  linkedin-post.md  review.json  solution.md
docs/day-14/: exercise.md  lesson.md  linkedin-post.md  review.json  solution.md
docs/day-15/: exercise.md  lesson.md  linkedin-post.md  review.json  solution.md
docs/day-16/: exercise.md  lesson.md  linkedin-post.md  review.json  solution.md
docs/day-17/: exercise.md  lesson.md  linkedin-post.md  review.json  solution.md
docs/day-18/: exercise.md  lesson.md  linkedin-post.md  review.json  solution.md
docs/day-19/: exercise.md  lesson.md  linkedin-post.md  review.json  solution.md
docs/day-20/: exercise.md  lesson.md  linkedin-post.md  review.json  solution.md
docs/day-21/: exercise.md  lesson.md  linkedin-post.md  review.json  solution.md
docs/getting-started/: how-to-use.md  (+3 more)
scripts/: README.md  __init__.py  extract_skills.py  organize_skills.py  pdf_to_markdown.py  run_pipeline.py
(+41 files in other folders)
