[project]
name = "python-teaching"
version = "0.1.0"
description = "21-Day Pandas & Dash Visualization Bootcamp"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "numpy>=2.3.4",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "plotly>=5.18.0",
    "dash>=2.14.0",
    "jupyter>=1.0.0",
    "jupyter-book>=1.0.4.post1",
    "ipykernel>=7.0.1",
]

[project.optional-dependencies]
dev = [
    # AI Content Generation Tools
    "agent-framework>=1.0.0b251016",
    "agent-framework-core>=1.0.0b251016",
    "agent-framework-azure-ai>=1.0.0b251016",
    "azure-ai-projects>=1.0.0",
    "azure-identity>=1.25.1",
    "pypdf>=6.1.2",
    "python-dotenv>=1.1.1",
    "pydantic>=2.12.3",
    "rich>=14.2.0",
    "click>=8.3.0",
    "typer>=0.19.2",
    # Development Tools
    "pytest>=8.4.2",
    "mypy>=1.18.2",
    "ruff>=0.14.1",
    # Web Development (optional)
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.2",
]
